--- a/toolbox/build.gradle
+++ b/toolbox/build.gradle
@@ -1,21 +1,41 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'android-toolbox'
+    bintrayName = 'android-toolbox'
+
+    publishedGroupId = 'com.hyperether'
+    libraryName = 'android-toolbox'
+    artifact = 'android-toolbox'
+
+    libraryDescription = 'Sdk for Android modules wrapping'
+
+    siteUrl = 'https://github.com/hyperether/android-toolbox'
+    gitUrl = 'https://github.com/hyperether/android-toolbox.git'
+
+    libraryVersion = '1.0.1'
+
+    developerId = 'hyperether'
+    developerName = 'HyperEther'
+    developerEmail = 'info@hyperether.com'
+
+    licenseName = 'GNU General Public License'
+    licenseUrl = 'https://www.gnu.org/licenses/gpl-3.0.en.html'
+    allLicenses = ["GPL-3.0"]
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 25
-        publishNonDefault false
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        debug {
-
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -32,3 +52,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
