--- a/toolbox/build.gradle
+++ b/toolbox/build.gradle
@@ -13,7 +13,7 @@ ext {
     siteUrl = 'https://github.com/hyperether/android-toolbox'
     gitUrl = 'https://github.com/hyperether/android-toolbox.git'
 
-    libraryVersion = '1.0.1'
+    libraryVersion = '1.0.0'
 
     developerId = 'hyperether'
     developerName = 'HyperEther'
@@ -30,7 +30,9 @@ android {
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0.1"
+        versionName "1.0.0"
+        project.archivesBaseName = "android-toolbox"
+        project.version = android.defaultConfig.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
