--- a/toolbox/build.gradle
+++ b/toolbox/build.gradle
@@ -13,7 +13,7 @@ ext {
     siteUrl = 'https://github.com/hyperether/android-toolbox'
     gitUrl = 'https://github.com/hyperether/android-toolbox.git'
 
-    libraryVersion = '1.0.11'
+    libraryVersion = '1.0.12'
 
     developerId = 'hyperether'
     developerName = 'HyperEther'
@@ -25,16 +25,16 @@ ext {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 29
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 12
-        versionName "1.0.11"
+        targetSdkVersion 29
+        versionCode 13
+        versionName "1.0.12"
         project.archivesBaseName = "android-toolbox"
         project.version = android.defaultConfig.versionName
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -49,14 +49,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
