--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.toolboxVersion = "1.0.17"
     repositories {
         google()
         jcenter()
@@ -16,10 +18,21 @@ buildscript {
     }
 }
 
+def githubProperties = new Properties()
+githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
+
 allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url = uri("https://maven.pkg.github.com/hyperether/android-toolbox")
+
+            credentials {
+                username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
+                password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
+            }
+        }
     }
 }
 
@@ -28,5 +41,59 @@ task clean(type: Delete) {
 }
 
 subprojects {
+    apply plugin: "maven-publish"
+
+    afterEvaluate {
+        // Filter projects, exclude applications and include libraries
+        if (!plugins.hasPlugin("android") && plugins.hasPlugin("android-library")) {
+            // Run assembleRelease task before running publish task
+            tasks.whenTaskAdded { publishTask ->
+                if (publishTask.name == 'publishToolboxToHyperEtherRepository') {
+                    publishTask.dependsOn 'assembleRelease'
+                }
+            }
+
+            task sourceJar(type: Jar) {
+                from android.sourceSets.main.java.srcDirs
+                classifier "sources"
+            }
+
+            publishing {
+                publications {
+                    hyperether(MavenPublication) {
+                        groupId "com.hyperether"
+                        artifactId "android-toolbox"
+                        version toolboxVersion
+                        artifact(sourceJar)
+                        artifact("$buildDir/outputs/aar/android-toolbox-release.aar")
+
+                        pom.withXml {
+                            def dependenciesNode = asNode().appendNode('dependencies')
+
+                            //Iterate over the compile dependencies (we don't want the test ones), adding a <dependency> node for each
+                            configurations.api.allDependencies.each {
+                                def dependencyNode = dependenciesNode.appendNode('dependency')
+                                dependencyNode.appendNode('groupId', it.group)
+                                dependencyNode.appendNode('artifactId', it.name)
+                                dependencyNode.appendNode('version', it.version)
+                            }
+                        }
+                    }
+                }
+
+                repositories {
+                    maven {
+                        name = "hyperether"
+                        url = uri("https://maven.pkg.github.com/hyperether/android-toolbox")
+                        credentials {
+                            username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
+                            password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
+                        }
+                    }
+                }
+            }
+
+        }
+    }
     tasks.withType(Javadoc).all { enabled = false }
 }
