--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,16 @@
-import org.apache.tools.ant.taskdefs.condition.Os
-
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.toolboxVersion = "1.0.17"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
+}
+
+plugins {
+    id("io.github.gradle-nexus.publish-plugin") version "1.3.0"
 }
 
 def githubProperties = new Properties()
@@ -24,7 +19,7 @@ githubProperties.load(new FileInputStream(rootProject.file("github.properties"))
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven {
             url = uri("https://maven.pkg.github.com/hyperether/android-toolbox")
 
@@ -53,18 +48,12 @@ subprojects {
                 }
             }
 
-            task sourceJar(type: Jar) {
-                from android.sourceSets.main.java.srcDirs
-                classifier "sources"
-            }
-
             publishing {
                 publications {
                     hyperether(MavenPublication) {
                         groupId "com.hyperether"
                         artifactId "android-toolbox"
                         version toolboxVersion
-                        artifact(sourceJar)
                         artifact("$buildDir/outputs/aar/android-toolbox-release.aar")
 
                         pom.withXml {
