--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:7.3.1'
     }
 }
 
@@ -86,3 +86,5 @@ subprojects {
     }
     tasks.withType(Javadoc).all { enabled = false }
 }
+
+apply from: 'scripts/publish-root.gradle'
