--- a/toolbox/build.gradle
+++ b/toolbox/build.gradle
@@ -41,6 +41,10 @@ android {
         }
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -55,3 +59,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+ext {
+    PUBLISH_GROUP_ID = 'com.hyperether'
+    PUBLISH_VERSION = '1.0.17'
+    PUBLISH_ARTIFACT_ID = 'android-toolbox'
+}
+apply from: 'publish-remote.gradle'
