Update gradle plugin to 7.4.2.

--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,22 @@
 buildscript {
-    ext.toolboxVersion = "1.0.17"
+    ext.toolboxVersion = "1.0.18"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
 plugins {
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
     id("io.github.gradle-nexus.publish-plugin") version "1.3.0"
 }
 
 def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven {
-            url = uri("https://maven.pkg.github.com/hyperether/android-toolbox")
-
-            credentials {
-                username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
-                password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
-            }
-        }
-    }
-}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
