--- a/toolbox/build.gradle
+++ b/toolbox/build.gradle
@@ -13,7 +13,7 @@ ext {
     siteUrl = 'https://github.com/hyperether/android-toolbox'
     gitUrl = 'https://github.com/hyperether/android-toolbox.git'
 
-    libraryVersion = '1.0.17'
+    libraryVersion = '1.0.18'
 
     developerId = 'hyperether'
     developerName = 'HyperEther'
@@ -40,11 +40,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    lintOptions {
-        checkReleaseBuilds false
+    namespace 'com.hyperether.toolbox'
+    lint {
         abortOnError false
+        checkReleaseBuilds false
     }
+
 }
 
 dependencies {
@@ -62,7 +63,7 @@ dependencies {
 
 ext {
     PUBLISH_GROUP_ID = 'com.hyperether'
-    PUBLISH_VERSION = '1.0.17'
+    PUBLISH_VERSION = '1.0.18'
     PUBLISH_ARTIFACT_ID = 'android-toolbox'
 }
 apply from: 'publish-remote.gradle'
